refactor: 요금제 및 리뷰 관련 테스트코드 재수정 (#37)